--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">NTC</string>
-    <string name="progression_bar">0.5          1.0           1.5            2.0</string>
+    <string name="progression_bar">0.50          0.75           1         1.25            1.50</string>
     <string name="START_LOG">START LOG</string>
     <string name="STOP_LOG">STOP LOG</string>
     <string name="START_MONITORING">START MONITORING</string>
